@@ -1,11 +1,15 @@
 === 0.7.0 :: In Progress
 
 * Implemented single-sign-out functionality as specified in CAS 3.1.  See
-  http://www.ja-sig.org/wiki/display/CASUM/Single+Sign+Out. 
+  http://www.ja-sig.org/wiki/display/CASUM/Single+Sign+Out.
 * The expire_sessions config variable is now respected -- ticket granting
   ticket cookies are set with an expiry datetime, so that the SSO session
   is effectively terminated once the ticket_granting_ticket_expiry period
   is reached.
+* If the 'service' URI given to the server in any request has a 'ticket'
+  parameter, the ticket will now be automatically stripped. This is to
+  avert any possible issues raised by misbehaving CAS clients (the CAS ticket
+  should never be part of the service URI).
 
 === 0.6.0 :: 2008-03-28
 
